@@ -29,20 +29,22 @@ if (!defined(_MYSQL_ENGINE_)) {
 
 $sql = array();
 
-$sql[] = 'CREATE TABLE IF NOT EXISTS `'._DB_PREFIX_.'packetery_order` (
-		    `id_order` int,
-		    `id_cart` int,
-		    `id_branch` int not null,
-		    `name_branch` varchar(255) not null,
-		    `currency_branch` char(3) not null,
-		    `is_cod` tinyint(1) not null default 0,
-		    `exported` tinyint(1) not null default 0,
-            `tracking_number` varchar(15) default \'\',
-            `id_carrier` int default 0,
-            `is_ad` int default 0,
-		    unique(id_order),
-		    unique(id_cart)
-		) engine='._MYSQL_ENGINE_.' default charset=utf8;';
+$sql[] = 'CREATE TABLE IF NOT EXISTS `' . _DB_PREFIX_ . 'packetery_order` (
+            `id_order` int,
+            `id_cart` int,
+            `id_branch` int NOT NULL,
+            `name_branch` varchar(255) NOT NULL,
+            `currency_branch` char(3) NOT NULL,
+            `is_cod` tinyint(1) NOT NULL DEFAULT 0,
+            `exported` tinyint(1) NOT NULL DEFAULT 0,
+            `tracking_number` varchar(15) DEFAULT \'\',
+            `id_carrier` int DEFAULT 0,
+            `is_ad` int DEFAULT 0,
+            `is_carrier` tinyint(1) NOT NULL DEFAULT 0,
+            `carrier_pickup_point` varchar(40) NULL,      
+            UNIQUE(`id_order`),
+            UNIQUE(`id_cart`)
+        ) ENGINE=' . _MYSQL_ENGINE_ . ' DEFAULT CHARSET=utf8;';
 
 $sql[] = 'CREATE TABLE IF NOT EXISTS `'._DB_PREFIX_.'packetery_payment` (
             `module_name` varchar(255) not null primary key,
